--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(OpenMP REQUIRED)
 
-add_executable(Server_c main.cpp EpollInstance.cpp)
+add_executable(Server_c main.cpp EpollInstance.cpp AcceptUsersHandle.cpp)
 
 target_link_libraries(Server_c PRIVATE OpenMP::OpenMP_CXX)
