Small changes in EpollFdStruct and Accept new connections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(Server_c)
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(OpenMP REQUIRED)
+aux_source_directory(. SRC_LIST)
+add_executable(${PROJECT_NAME} ${SRC_LIST})
+#add_executable(Server_c main.cpp EpollInstance.cpp EpollFdStruct.cpp AcceptUsersHandle.cpp)
 
-add_executable(Server_c main.cpp EpollInstance.cpp AcceptUsersHandle.cpp)
-
-target_link_libraries(Server_c PRIVATE OpenMP::OpenMP_CXX)
+target_link_libraries(Server_c PRIVATE protobuf OpenMP::OpenMP_CXX)
